Build dependencies (I268).